--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -1,8 +1,15 @@
 <h1>餐廳後台</h1>
 
+<a href="/admin/restaurants">Restaurant</a>
+<span> | </span>
+<a href="/admin/users">User</a>
+<br />
+
 <a href='/admin/restaurants/create'>
-  <button type="button" class="btn btn-primary">New Restaurant</button>
+
+  <button type="button" class="btn btn-primary mt-3">New Restaurant</button>
 </a>
+
 
 <br />
 <br />
