--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -1,8 +1,9 @@
 <h1>餐廳後台</h1>
 
-<a href="/admin/restaurants">Restaurant</a>
-<span> | </span>
-<a href="/admin/users">User</a>
+<a href="/admin/restaurants">Restaurant</a> |
+<a href="/admin/users">User</a> |
+<a href='/admin/categories'>Categories</a>
+<br />
 <br />
 
 <a href='/admin/restaurants/create'>
