--- a/views/admin/users.handlebars
+++ b/views/admin/users.handlebars
@@ -1,10 +1,7 @@
 <h1>餐廳後台</h1>
-
-
-<a href="/admin/restaurants">Restaurant</a>
-<span> | </span>
-<a href="/admin/users">User</a>
-
+<a href='/admin/restaurants'>Restaurants</a> |
+<a href="/admin/users">Users</a> |
+<a href='/admin/categories'>Categories</a>
 <br />
 <br />
 <table class="table">
