--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -20,9 +20,13 @@
 </div>
 <br />
 <br />
-<br /><br />
 <h3>所有評論：</h3>
 {{#each restaurant.Comments}}
+{{#if ../user.isAdmin}}
+<form action="/comments/{{this.id}}?_method=DELETE" method="POST" style="float: right;">
+  <button type="submit" class="btn btn-danger">Delete</button>
+</form>
+{{/if}}
 <blockquote class="blockquote mb-0">
   <h4><a href="/users/{{this.User.id}}">{{this.User.name}}</a></h4>
   <p>{{this.text}}</p>
@@ -31,6 +35,8 @@
 </blockquote>
 <hr />
 {{/each}}
+<br /><br />
+
 <form action="/comments" method="POST">
   <div class="form-group">
     <label for="text">留下評論：</label>
@@ -39,4 +45,6 @@
   <input type="hidden" name="restaurantId" value="{{restaurant.id}}" />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+<br /><br />
+
 <a href="javascript:history.back()">回上一頁</a>
