--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -8,6 +8,9 @@
   <li class="nav-item">
     <a class="nav-link" href="/users/top">美食達人</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/restaurants/top">Top 10 人氣餐廳</a>
+  </li>
 </ul>
 <br />
 
@@ -38,13 +41,25 @@
         </p>
         <span class="badge badge-secondary">{{this.categoryName}}</span>
         <p class="card-text">{{this.description}}</p>
-        {{#if this.isFavorited }}
-        <form action="/favorite/{{this.id}}?_method=DELETE" method="POST"><button type="submit"
-            class="btn btn-danger">移除最愛</button></form>
-        {{else}}
-        <form action="/favorite/{{this.id}}" method="POST"><button type="submit" class="btn btn-primary">加到最愛</button>
-        </form>
-        {{/if}}
+        <div class="d-flex">
+          <div class="mr-2">{{#if this.isFavorited }}
+            <form action="/favorite/{{this.id}}?_method=DELETE" method="POST"><button type="submit"
+                class="btn btn-danger">移除最愛</button></form>
+            {{else}}
+            <form action="/favorite/{{this.id}}" method="POST"><button type="submit"
+                class="btn btn-primary">加到最愛</button>
+            </form>
+            {{/if}}
+          </div>
+          {{#if isLike }}
+          <form action="/like/{{this.id}}?_method=DELETE" method="POST" style="display: contents;"><button type="submit"
+              class="btn btn-danger">Unlike</button></form>
+          {{else}}
+          <form action="/like/{{this.id}}" method="POST" style="display: contents;"><button type="submit"
+              class="btn btn-primary">Like</button></form>
+          {{/if}}
+        </div>
+
       </div>
     </div>
   </div>
